# opensensor-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bootstrap_cluster.sh  build.rs  config.toml  docker-compose.yaml
.github/: pull_request_template.md
config/redpanda/: console-config.yaml
flatbuffers/: simple.bfbs
src/: arrow.rs  error.md  error.rs  lib.rs  measurement.rs  parquet.rs  reflection_generated.rs  sensor.rs  test_arrow.rs  tests.rs  transducer.rs
src/archiver/: README.md  cli.rs  error.rs  main.rs  mod.rs  tests.rs
