[package]
name = "opensensor"
version = "0.4.0"
edition = "2021"
authors = ["Colin Dablain"]
readme = "README.md"
repository = "https://github.com/opensensordotdev/opensensor-rs"
license = "Apache-2.0"
keywords = ["opensensor", "sensor", "streaming"]
categories = ["api-bindings", "embedded", "science", "computer-vision"]
exclude = ["config/", "minio/", "docker-compose.yaml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["full"] }
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "1"
const-str = { version = "0.5", features = ["proc"] }
flatbuffers = "22.9.29"
chrono = "0.4"
aws-sdk-s3 = "0.19.0"
zstd = "0.11"
clap = {version = "4", features = ["derive"] }
tracing = "0.1"
redpanda = "0.5"

# arrow + parquet serialization
arrow2 = {version = "0.16", features = ["io_parquet", "io_parquet_compression", "compute"]}
arrow2_convert = "0.4"
parquet2 = "0.17"
parquet = "31"

[build-dependencies]
flatc-rust = "0.2"

[lib]
crate-type = ["lib"]